alert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alert-manager
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: alert.example.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-prometheus-alertmanager
            port:
              number: 80
